Added login and jwt capability

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,12 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=*
 
+spring.jpa.hibernate.ddl-auto= update
+
 # Timeout settings
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=3000
 spring.mail.properties.mail.smtp.writetimeout=5000
+
+connect.app.jwtSecret= MzJiODU4NTU4Njg0MjI0ODU4MzI0NTY3NTg2NzQyMjE=
+connect.app.jwtExpirationMs= 86400000
