Added user profile picture, about, and ability to edit user details

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 connect.app.jwtSecret= MzJiODU4NTU4Njg0MjI0ODU4MzI0NTY3NTg2NzQyMjE=
 connect.app.jwtExpirationMs= 86400000
+
+# Maximum file size in bytes
+spring.servlet.multipart.max-file-size=10MB
+# Maximum request size in bytes
+spring.servlet.multipart.max-request-size=10MB
