--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 # Database properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/connect
+spring.datasource.url=jdbc:postgresql://localhost:5433/connect
 spring.datasource.username=postgres
-spring.datasource.password=connect
+spring.datasource.password=Pragyaisha@100
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
