--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,8 +33,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 connect.app.jwtSecret= MzJiODU4NTU4Njg0MjI0ODU4MzI0NTY3NTg2NzQyMjE=
 connect.app.jwtExpirationMs= 86400000
-
-# Maximum file size in bytes
-spring.servlet.multipart.max-file-size=10MB
-# Maximum request size in bytes
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=128MB
+spring.servlet.multipart.max-request-size=128MB
